--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -6,7 +6,7 @@ mentorship. I will forever carry the lessons I learned from him.
 I want to thank my committee members Andrew Wilson and Adrian Lewis, as well as
 my temporary advisor Shane Henderson. Andrew led me into an important area of my
 research, which makes up Chapter 3 of this thesis. Adrian and Shane both offered
-my valuable advices in research and life as a graduate student.
+my valuable advice in research and life as a graduate student.
 
 I deeply appreciate all my wonderful collaborators. Chapter 2 was co-authored
 with Austin Benson and David Bindel. Chapter 3 was co-authored with David
@@ -21,9 +21,9 @@ Loeb, Zachary Clawson, Eric Lee, David Eriksson, and my best friend Marc Aur\`
 enjoyable as well.
 
 I would like to acknowledge my colleagues during my internships at Lawrence
-Berkeley National Laboratory and Google Network Infrastructure Team. You
-taught me many useful skills, and helped me become a better researcher and
-programmer.
+Berkeley National Laboratory and Google Network Infrastructure Team,
+particularly my mentors Lin Lin and Rui Wang. You taught me many useful skills,
+and helped me become a better researcher and programmer.
 
 Most importantly, I am sincerely grateful for my supportive family and wife. You
 have always been by my side even when I am far away.
