--- a/ndos.tex
+++ b/ndos.tex
@@ -1,5 +1,6 @@
-\section{Abstract}\label{ndossec:abs}
-	\input{./ndos/abstract}
+\input{./ndos/chapnom}
+
+\input{./ndos/abstract}
 
 \section{Introduction}\label{ndossec:int}
 	\input{./ndos/introduction}
