--- a/ndos/abstract.tex
+++ b/ndos/abstract.tex
@@ -9,7 +9,7 @@ spectral density} --- is largely limited to simple random graph models.  The
 interior of the spectrum of real-world graphs remains largely unexplored,
 difficult to compute and to interpret.
 
-In this paper, we delve into the heart of spectral densities of real-world
+In this chapter, we delve into the heart of spectral densities of real-world
 graphs.  We borrow tools developed in condensed matter physics, and add novel
 adaptations to handle the spectral signatures of common graph motifs.  The
 resulting methods are highly efficient, as we illustrate by computing spectral
