--- a/ndos/analysis.tex
+++ b/ndos/analysis.tex
@@ -12,6 +12,8 @@ $K_\sigma\ast\mu$. We will start with the following theorem.
 	where $J_m$ are Jackson smoothing factors and $c_m$ are the Chebyshev
 	coefficients.
 \end{theorem}
+\nomenclature[1]{$J_m$}{Jackson smoothing factors}
+\nomenclature[1]{$c_m$}{Chebyshev moments}
 We can pick a smooth mollifier $K$ with $\text{Lip}(K)=1$. For any $\nu\in\BBR$
 and $\lambda\in [-1,1]$ there exists a degree $M$ polynomial such that 
 \begin{equation}
