--- a/ndos/conclusion.tex
+++ b/ndos/conclusion.tex
@@ -1,4 +1,4 @@
-In this paper, we make the computation of spectral densities a practical tool
+In this chapter, we make the computation of spectral densities a practical tool
 for the analysis of large real-world network. Our approach borrows from methods
 in solid state physics, but with adaptations that improve performance in the
 network analysis setting by special handling of graph motifs that leave
