--- a/notation.tex
+++ b/notation.tex
@@ -52,6 +52,13 @@
 \newcommand{\BKtil}[1]{\bm{\tilde{K}_{#1}}}
 % \newcommand{\BKtil}[1]{\tilde{\bm{K}}_{\!\textit{\textbf{#1}}}}
 
+% Math accent
+
+\newcommand{\Hhat}{\hat{H}}
+\newcommand{\Hdiag}{\hat{H}_{\diag}}
+
+\newcommand{\hhat}{\hat{h}}
+
 % Math Blackboard Bold
 \newcommand{\BBR}{\mathbb{R}}
 
@@ -70,10 +77,13 @@
 \newcommand{\To}{\mathbin{\to}}
 
 % Math Calligraphy
+\newcommand{\calA}{\mathcal{A}}
 \newcommand{\calC}{\mathcal{C}}
 \newcommand{\calL}{\mathcal{L}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calO}{\mathcal{O}}
+\newcommand{\calU}{\mathcal{U}}
+\newcommand{\calV}{\mathcal{V}}
 \newcommand{\NN}{\mathcal{NN}}
 \newcommand{\NOR}{\mathcal{NOR}}
 \newcommand{\PSD}{\mathcal{PSD}}
@@ -127,6 +137,7 @@
 % Helper Command
 \newcommand{\numintitle}[1]{\texorpdfstring{#1}{}}
 \newcommand{\ph}{\phantom{ }}
+\newcommand{\todo}[1]{{\color{red}#1}}
 
 % Color
 \definecolor{burgundy}{RGB}{140,0,26}
