--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,76 @@
+% Chapter 1
+
+@article{drineas2016randnla,
+  title={RandNLA: randomized numerical linear algebra},
+  author={Drineas, Petros and Mahoney, Michael W},
+  journal={Communications of the ACM},
+  volume={59},
+  number={6},
+  pages={80--90},
+  year={2016},
+  publisher={ACM}
+}
+
+% Chapter 2
+
+@book{arumugam2016handbook,
+  title={Handbook of graph theory, combinatorial optimization, and algorithms},
+  author={Arumugam, Subramanian and Brandst{\"a}dt, Andreas and Nishizeki, Takao and others},
+  year={2016},
+  publisher={Chapman and Hall/CRC}
+}
+
+@inproceedings{boutsidis2009improved,
+  title={An improved approximation algorithm for the column subset selection problem},
+  author={Boutsidis, Christos and Mahoney, Michael W and Drineas, Petros},
+  booktitle={Proceedings of the twentieth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={968--977},
+  year={2009},
+  organization={SIAM}
+}
+
+@inproceedings{deshpande2010efficient,
+  title={Efficient volume sampling for row/column subset selection},
+  author={Deshpande, Amit and Rademacher, Luis},
+  booktitle={2010 IEEE 51st Annual Symposium on Foundations of Computer Science},
+  pages={329--338},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{lee1999learning,
+  title={Learning the parts of objects by non-negative matrix factorization},
+  author={Lee, Daniel D and Seung, H Sebastian},
+  journal={Nature},
+  volume={401},
+  number={6755},
+  pages={788},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
+@article{moler2003nineteen,
+  title={Nineteen dubious ways to compute the exponential of a matrix, twenty-five years later},
+  author={Moler, Cleve and Van Loan, Charles},
+  journal={SIAM review},
+  volume={45},
+  number={1},
+  pages={3--49},
+  year={2003},
+  publisher={SIAM}
+}
+
+@article{udell2019big,
+  title={Why Are Big Data Matrices Approximately Low Rank?},
+  author={Udell, Madeleine and Townsend, Alex},
+  journal={SIAM Journal on Mathematics of Data Science},
+  volume={1},
+  number={1},
+  pages={144--160},
+  year={2019},
+  publisher={SIAM}
+}
+
 % Chapter 2
 
 @article{avron2011randomized,
